--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,17 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>lib/</classpathPrefix>
+                <mainClass>com.intern.App</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
+
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
@@ -72,4 +82,6 @@
       </plugins>
     </pluginManagement>
   </build>
+
+
 </project>
